widget/js/styles.css
@layer base, theme, custom;

@layer base {
    :host,
        *,
        *::before,
        *::after {
            box-sizing: border-box;
            margin: 0;
            padding: 0;
            border: 0 solid;
        }

    :host {
        --extra-spacing: 2px; /* (RING_SIZE - checkbox.dimension)/2 */
        --label-spacing: 10px;
        --border-radius: 2px;
        --warn-color: #A70B0B;
        --accent-color: #009400;
    }
}

@layer theme {
    :host([theme="light"]) {
        --dark-color: #070113;
        --gray-color: #E0E0E0;
        --pie-color: #D8E9E9;
        --background-color: #fff;
        --checkbox-background-color: #FFF;
        --checkbox-hover-color: #EBF4F4;
    }

    :host([theme="dark"]) {
        --dark-color: #EBF4F4;
        --gray-color: #656C7B;
        --pie-color: #376262;
        --background-color: #041616;
        --checkbox-background-color: #223C3C;
        --checkbox-hover-color: #1C3232;
    }
}

.pc-captcha-widget {
    display: inline-flex;
    align-items: center;
    flex-direction: row;
    padding: 12px 16px;
    border: 1px solid var(--gray-color);
    border-radius: var(--border-radius);
    background-color: var(--background-color);
    gap: 64px;
    box-sizing: border-box;
}

.pc-captcha-widget.stretch {
    display: flex;
    height: 100%;
    max-width: none;
    justify-content: space-between;
}

.pc-captcha-widget.hidden {
    display: none;
}

.pc-captcha-widget.floating {
    position: absolute;
    left: 0;
    top: 0;
    transform: translate(0, -100%);
    background-color: #FFF;
}

.pc-interactive-area {
    display: flex;
    align-items: center;
    position: relative;
    min-width: 160px;
    font-size: 1em;
}

.pc-interactive-area label {
    padding-left: var(--label-spacing);
    color: var(--dark-color);
}

.pc-interactive-area input[type="checkbox"] {
    width: 32px;
    height: 32px;
    margin: 0 0 0 var(--extra-spacing);
    appearance: none;
    background-color: var(--checkbox-background-color);
    border: 2px solid var(--dark-color);
    border-radius: 4px;
    cursor: pointer;
}

.pc-interactive-area input[type="checkbox"]+label {
    padding: 0 0 0 calc(var(--extra-spacing) + var(--label-spacing));
}

@keyframes colorChange {
    0%, 100% { border-color: var(--dark-color); }
    50% { border-color: var(--gray-color); }
}

.pc-interactive-area input[type="checkbox"].loading {
    animation: colorChange 2s infinite;
    animation-timing-function: ease-in-out;
    background-color: var(--checkbox-hover-color);
    cursor: default;
}

.pc-interactive-area input[type="checkbox"].ready {
    background-color: var(--checkbox-background-color);
    border-color: var(--dark-color);
    cursor: pointer;
}

.pc-interactive-area input[type="checkbox"].invalid {
    background-color: var(--checkbox-hover-color);
    border-color: var(--gray-color);
    cursor: not-allowed;
}

.pc-interactive-area input[type="checkbox"]:not(.invalid):hover {
    background-color: var(--checkbox-hover-color);
    border-color: var(--accent-color);
}

.pc-interactive-area input[type="checkbox"].invalid:hover + label {
    cursor: not-allowed;
}

.pc-interactive-area input[type="checkbox"]:not(.invalid):hover + label {
    cursor: pointer;
    /* color: var(--dark-color); /* Highlight the text */
}

@keyframes dots-1 { from { opacity: 0; } 25% { opacity: 1; } }
@keyframes dots-2 { from { opacity: 0; } 50% { opacity: 1; } }
@keyframes dots-3 { from { opacity: 0; } 75% { opacity: 1; } }
@-webkit-keyframes dots-1 { from { opacity: 0; } 25% { opacity: 1; } }
@-webkit-keyframes dots-2 { from { opacity: 0; } 50% { opacity: 1; } }
@-webkit-keyframes dots-3 { from { opacity: 0; } 75% { opacity: 1; } }

.pc-interactive-area .dots span {
    animation: dots-1 2s infinite steps(1);
    -webkit-animation: dots-1 2s infinite steps(1);
}

.pc-interactive-area .dots span:first-child + span {
    animation-name: dots-2;
    -webkit-animation-name: dots-2;
}

 .pc-interactive-area .dots span:first-child + span + span {
    animation-name: dots-3;
    -webkit-animation-name: dots-3;
}

#pc-progress {
    display: flex;
    justify-content: center;
}

.pc-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: var(--extra-spacing);
    color: var(--dark-color);
}

.company-logo {
    max-width: 100px;
    height: auto;
}

a.pc-link {
    margin-top: 5px;
    text-decoration: none;
    color: currentcolor;
    text-align: center;
    font-size: 0.55em;
    text-transform: uppercase;
    font-weight: 700;
    line-height: 1.1em;
}

a.pc-link:hover {
    text-decoration: underline;
}

@keyframes checkmark {
    0% {
        stroke-dashoffset: 100px
    }
    100% {
        stroke-dashoffset: 0px
    }
}

/* tick mark */
svg.verified polyline {
    animation: checkmark 0.35s ease-in-out 0.1s backwards;
    stroke: #F2F2F2;
}

svg.verified circle {
    fill: var(--accent-color);
}

#pc-debug {
    font-size: 12px;
    color: var(--gray-color);
    position: absolute;
    top: 100%;
    left: 50px; /*30px checkbox + 2*10 margins*/
    cursor: default;
}

#pc-debug.warn {
    color: var(--warn-color);
}

